--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,124 @@
 ---
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
+title: "Monitoring data activity"
+author: "Carlos-Melgarejo"
+date: "6/1/2021"
+output:
+  html_document: default
+  pdf_document: default
 ---
+# Monitoring data assignment
+
+```{r initial setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+```
+
+## 1. Loading and preprocessing the data
+```{r}
+unzip(zipfile = "activity.zip")
+data=read.csv("activity.csv")
+data$date=as.Date(as.character(data$date))
+summary(data)
+```
+ 
+## 2. What is mean total number of steps taken per day?
+#### a. Total steps taken on each day
+```{r}
+byStep=aggregate(data$steps,by=list(data$date),sum)
+names(byStep)=c("Date","TotalSteps")
+head(byStep)
+```
+
+#### b. Histogram of the total number of steps taken each day
+```{r}
+hist(byStep$TotalSteps,breaks = 25,col = "steelblue",border = "white",
+     main = "Total number of Steps per Day", xlab = "Total Steps",ylim = c(0,20))
+```
+
+#### c. Mean and median of the total number of steps taken per day
+```{r}
+mean=round(mean(byStep$TotalSteps,na.rm=TRUE),2)
+median=round(median(byStep$TotalSteps,na.rm = TRUE),2)
+```
+Mean of the total number of steps taken per day is: `r mean` 
+Median of the total number of steps taken per day is: `r median`
 
 
-## Loading and preprocessing the data
+## 3. What is the average daily activity pattern?
+
+#### a. Time series plot (i.e. type = “l”) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+```{r}
+byInterval=aggregate(na.omit(data)$steps,by=list(na.omit(data)$interval),mean)
+names(byInterval)=c("Interval","Mean.Steps")
+
+plot(x=byInterval$Interval,y=byInterval$Mean.Steps,type = "l",col =10,lwd=2,main ="Average of Steps accross all Days",xlab="Interval",ylab = "Step")
+```
+
+#### b. The 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps
+```{r}
+byInterval[byInterval$Mean.Steps==max(byInterval$Mean.Steps),]
+```
+
+## 4. Imputing missing values
+
+#### a. Total number of missing values in the dataset (i.e. the total number of rows with NAs)
+```{r}
+sapply(X=data,FUN = function(x) sum(is.na(x)))
+```
+
+#### b. All the NAs will be replaced by the mean of steps taken on its interval
+#### c. New dataset that is equal to the original dataset but with the missing data filled in.
+```{r}
+ complete.data=data
+for (i in c(which(is.na(data$steps)))) {
+  complete.data$steps[i]=byInterval[which(byInterval$Interval==data$interval[i]),2]
+}
+ sapply(X=complete.data,FUN = function(x) sum(is.na(x)))
+```
+
+#### d. Histogram of the total number of steps taken each day
+```{r}
+byStep.new=aggregate(complete.data$steps,by=list(complete.data$date),sum)
+names(byStep.new)=c("Date","TotalSteps")
+hist(byStep.new$TotalSteps,breaks = 25,col = "steelblue",border = "white",
+     main = "Total number of Steps per Day", xlab = "Total Steps",
+     ylim = c(0,20))
+```
+
+#### e. Any differences in mean and median between original data and data with NAs replaced?
+```{r}
+#Compare between histogram
+newmean=round(mean(byStep.new$TotalSteps),2)
+newmedian=round(median(byStep.new$TotalSteps),2)
+par(mfrow=c(1,2))
+hist(byStep$TotalSteps,breaks = 25,col = "steelblue",border = "white",
+     main=NULL,xlab = "Total Steps per day before fill NAs",ylim = c(0,20))
+hist(byStep.new$TotalSteps,breaks = 25,col = "steelblue",border = "white",
+     main=NULL,xlab = "Total Steps per day after fill NAs",
+     ylim = c(0,20))
+```
+New Mean of the total number of steps taken per day is: `r newmean` 
+New median of the total number of steps taken per day is: `r newmedian` 
+The mean between those two data is the same which is `r newmean`. However, the median rise from `r median` to `r newmedian`.
 
 
+## 5. Are there differences in activity patterns between weekdays and weekends?
 
-## What is mean total number of steps taken per day?
+#### a. New factor variable in the dataset with two levels - “weekday” and “weekend” indicating whether a given date is a weekday or weekend day
+```{r}
+new.data=complete.data
+new.data$day.of.week=ifelse(weekdays(as.Date(new.data$date)) %in% c("Saturday","Sunday"),
+                     "weekend","weekday")
+new.data=aggregate(new.data$steps,by=list(new.data$interval,new.data$day.of.week),mean)
+names(new.data)=c("Interval","day.of.week","Mean.Steps")
+head(new.data)
+```
 
+#### b. Panel plot containing a time series plot (i.e. type = “l”) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis)
 
-
-## What is the average daily activity pattern?
-
-
-
-## Imputing missing values
-
-
-
-## Are there differences in activity patterns between weekdays and weekends?
+```{r}
+library(ggplot2)
+ggplot(new.data,aes(x=Interval,y=Mean.Steps,color=day.of.week))+
+  geom_line()+
+  facet_grid(day.of.week~.)+
+  labs(title="Means of Steps by Interval", x="Interval",y="Mean Steps")
+```
